- add xterm styles to fix scrollbar position - add handler for copying - fix size of graph pane parent - fix scaling and fitting of graph image - fix potential probs when graph is interacted with right mouse clicks

--- a/adv-ocgena-client/src/renderer/App.css
+++ b/adv-ocgena-client/src/renderer/App.css
@@ -3,6 +3,29 @@
 @tailwind utilities;
 @import "../../node_modules/xterm/css/xterm.css";
 
+.xterm-viewport {
+  overflow-y: scroll;
+}
+
+/* The scrollbar track */
+.xterm-viewport::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* The scrollbar itself */
+.xterm-viewport::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* The scrollbar handle */
+.xterm-viewport::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+.xterm-viewport::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
 /*
  * @NOTE: Prepend a `~` to css file paths that are in your node_modules
  *        See https://github.com/webpack-contrib/sass-loader#imports
